--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,35 @@
 Fastapi
 mysqlconnector
 json
+﻿blinker==1.7.0
+Brotli==1.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
+Flask==3.0.2
+Flask-Compress==1.14
+Flask-Login==0.6.3
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==3.1.1
+fonttools==4.50.0
+greenlet==3.0.3
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+numpy==1.26.4
+packaging==24.0
+pillow==10.2.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+requests==2.31.0
+six==1.16.0
+SQLAlchemy==2.0.28
+typing_extensions==4.10.0
+urllib3==2.2.1
+Werkzeug==3.0.1
